fix: add compiler args